<resources>
    <string name="app_name">RentAPanda</string>
    <string name="customer_name">Customer name :</string>
    <string name="city">City :</string>
    <string name="recurrence">Recurrence :</string>
    <string name="once">Once</string>
    <string name="weekly">Weekly</string>
    <string name="two_weeks">Every 2 weeks</string>
    <string name="monthly">Monthly</string>
    <string name="distance">Distance :</string>
    <string name="km">%s km</string>
    <string name="unknown">Unknown</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="status">Status :</string>
    <string name="date">Date :</string>
    <string name="street">Street :</string>
    <string name="order_time">Order time :</string>
    <string name="payment_method">Payment Method :</string>
    <string name="price">Price :</string>
    <string name="error_text">Something went wrong! Please check your network connection!</string>
</resources>
