<?xml version="1.0" encoding="utf-8"?><!-- A CardView that contains a TextView -->
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    card_view:cardCornerRadius="4dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvNameLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/text_margin"
            android:layout_marginStart="@dimen/text_margin"
            android:layout_marginTop="@dimen/text_margin"
            android:text="@string/customer_name"
            android:textAppearance="?attr/textAppearanceListItem" />

        <TextView
            android:id="@+id/tvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvNameLabel"
            android:layout_marginBottom="@dimen/text_margin"
            android:layout_marginLeft="@dimen/text_margin"
            android:layout_marginStart="@dimen/text_margin"
            android:text="Test User"
            android:textAppearance="?attr/textAppearanceListItem"
            android:textColor="@color/colorAccent" />

        <TextView
            android:id="@+id/tvCityLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvName"
            android:layout_marginLeft="@dimen/text_margin"
            android:layout_marginStart="@dimen/text_margin"
            android:text="@string/city"
            android:textAppearance="?attr/textAppearanceListItem" />

        <TextView
            android:id="@+id/tvCity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvCityLabel"
            android:layout_marginBottom="@dimen/text_margin"
            android:layout_marginLeft="@dimen/text_margin"
            android:layout_marginStart="@dimen/text_margin"
            android:text="Description"
            android:textAppearance="?attr/textAppearanceListItem"
            android:textColor="@color/colorAccent" />

        <TextView
            android:id="@+id/tvRecurrenceLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginEnd="@dimen/text_margin"
            android:layout_marginRight="@dimen/text_margin"
            android:layout_marginTop="@dimen/text_margin"
            android:text="@string/recurrence"
            android:textAppearance="?attr/textAppearanceListItem" />

        <TextView
            android:id="@+id/tvRecurrence"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/tvRecurrenceLabel"
            android:layout_marginBottom="@dimen/text_margin"
            android:layout_marginEnd="@dimen/text_margin"
            android:layout_marginRight="@dimen/text_margin"
            android:ellipsize="end"
            android:ems="8"
            android:gravity="right|end"
            android:lines="1"
            android:text="Some Re"
            android:textAppearance="?attr/textAppearanceListItem"
            android:textColor="@color/colorPrimary" />

        <TextView
            android:id="@+id/tvDistanceLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/tvRecurrence"
            android:layout_marginEnd="@dimen/text_margin"
            android:layout_marginRight="@dimen/text_margin"
            android:text="@string/distance"
            android:textAppearance="?attr/textAppearanceListItem" />


        <TextView
            android:id="@+id/tvDistance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/tvDistanceLabel"
            android:layout_marginEnd="@dimen/text_margin"
            android:layout_marginRight="@dimen/text_margin"
            android:text="Unknown"
            android:textAppearance="?attr/textAppearanceListItem"
            android:textColor="@color/colorPrimary" />

    </RelativeLayout>
</android.support.v7.widget.CardView>